docs/sf-export/sfdx-raw/objects/System_Control_Settings__mdt/System_Control_Settings__mdt.object-meta.xml
<CustomObject>
    <label>System Control Settings</label>
    <pluralLabel>System Control Settings</pluralLabel>
</CustomObject>