docs/sf-export/sfdx-raw/objects/System_Control_Settings__mdt/fields/Disable_Lead_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Disable_Lead_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Lead Trigger</label>
    <type>Checkbox</type>
</CustomField>