docs/sf-export/sfdx-raw/objects/System_Control_Settings__mdt/fields/Disable_Opp_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Disable_Opp_Amendment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Opp Amendment</label>
    <type>Checkbox</type>
</CustomField>