docs/sf-export/sfdx-raw/objects/System_Control_Settings__mdt/fields/Disable_Web_lead_Deduplication__c.field-meta.xml
<CustomField>
    <fullName>Disable_Web_lead_Deduplication__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable Web lead Deduplication</label>
    <type>Checkbox</type>
</CustomField>